# toto-mcp

./: .gitignore  .ignoreobotcatalogs  CLAUDE.md  nano-banana-mcp.yaml  server.py
.github/workflows/: publish.yml
docs/plans/: 2026-03-09-nano-banana-obot-design.md  2026-03-09-nano-banana-obot-plan.md
obot-catalog/: nano-banana-mcp.yaml
servers/nano-banana-mcp/: pyproject.toml
servers/nano-banana-mcp/src/nano_banana_mcp/: server.py
